added failure section

--- a/index.html
+++ b/index.html
@@ -24,5 +24,37 @@
 				<button class="primary-btn">Contact Us</button>
 			</div>
 		</header>
+		<main class="container">
+			<section class="failure">
+				<div class="failure-image">
+					<img src="images/fahim.png" alt="Fahim" />
+				</div>
+				<div class="failure-description">
+					<div class="failure-title">
+						<h3>My failures of previous year</h3>
+					</div>
+					<div class="failure-info">
+						<p>
+							Contrary to popular belief, Lorem Ipsum is not simply random text.
+							It has roots in a piece of classical Latin literature from 45 BC,
+							making it over 2000 years old. Richard McClintock.
+						</p>
+					</div>
+					<div class="failure-list">
+						<ul>
+							<li>Contrary to popular belief, is not simply.</li>
+							<li>Contrary to popular belief.</li>
+
+							<li>Contrary to popular , is not simply.</li>
+
+							<li>Contrary to popular belief, is not simply.</li>
+							<li>Contrary to popular belief.</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+
+            
+		</main>
 	</body>
 </html>
