--- a/index.html
+++ b/index.html
@@ -54,7 +54,55 @@
 				</div>
 			</section>
 
-            
+			<section class="my-plans">
+				<div class="my-plans-title"><h1>My Plans</h1></div>
+				<div class="plans">
+					<div class="plan">
+						<div class="plan-icon">
+							<img src="images/icons/web.png" alt="Web Development" />
+						</div>
+						<div class="plan-title">
+							<h4>Web Development</h4>
+						</div>
+						<div class="plan-info">
+							<p>I want to start</p>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-icon">
+							<img src="images/icons/js.png" alt="Web Development" />
+						</div>
+						<div class="plan-title">
+							<h4>Javascript</h4>
+						</div>
+						<div class="plan-info">
+							<p>I want to learn</p>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-icon">
+							<img src="images/icons/smoke.png" alt="Web Development" />
+						</div>
+						<div class="plan-title">
+							<h4>Smoking Habit</h4>
+						</div>
+						<div class="plan-info">
+							<p>I want to end</p>
+						</div>
+					</div>
+					<div class="plan">
+						<div class="plan-icon">
+							<img src="images/icons/ecom.png" alt="Web Development" />
+						</div>
+						<div class="plan-title">
+							<h4>ecommerce</h4>
+						</div>
+						<div class="plan-info">
+							<p>I want to develop</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
