added mindset section

--- a/index.html
+++ b/index.html
@@ -103,6 +103,19 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="mindset">
+				<div class="mindset-image">
+					<div class="mindset-title">
+						<h3>Awlays keep a positive mindset</h3>
+					</div>
+					<button class="secondary-btn">Call Now</button>
+					<!-- <img src="images/watch.png" alt="Watch" /> -->
+				</div>
+			</section>
+
+            
 		</main>
+		<br /><br /><br />
 	</body>
 </html>
