--- a/index.html
+++ b/index.html
@@ -113,9 +113,31 @@
 					<!-- <img src="images/watch.png" alt="Watch" /> -->
 				</div>
 			</section>
-
-            
 		</main>
-		<br /><br /><br />
+
+		<footer class="footer">
+			<div class="footer-content">
+				<div class="future">
+					<div class="future-title">
+						<h2>Future</h2>
+					</div>
+					<div class="future-description">
+						<p>
+							There are many variations of passages of Lorem Ipsum available,
+							but the majority have suffered alteration in some form, by
+							injected humour, or randomised words
+						</p>
+						<p>Email : info@gmail.com</p>
+						<p>Phone : 01500 00 00 00</p>
+					</div>
+				</div>
+				<div class="subscribe">
+					<div class="subscribe-title">
+						<h3>Subscribe</h3>
+					</div>
+					<input type="email" name="" id="" placeholder="Enter your mail" />
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
