added footer button

--- a/index.html
+++ b/index.html
@@ -110,7 +110,6 @@
 						<h3>Awlays keep a positive mindset</h3>
 					</div>
 					<button class="secondary-btn">Call Now</button>
-					<!-- <img src="images/watch.png" alt="Watch" /> -->
 				</div>
 			</section>
 		</main>
@@ -130,12 +129,18 @@
 						<p>Email : info@gmail.com</p>
 						<p>Phone : 01500 00 00 00</p>
 					</div>
+					<div class="future-icons">
+						<a href="#"><img src="images/icons/fb.png" alt="Facebook" /></a>
+						<a href="#"><img src="images/icons/twitter.png" alt="Twitter" /></a>
+						<a href="#"><img src="images/icons/youtube.png" alt="Youtube" /></a>
+					</div>
 				</div>
 				<div class="subscribe">
 					<div class="subscribe-title">
 						<h3>Subscribe</h3>
 					</div>
 					<input type="email" name="" id="" placeholder="Enter your mail" />
+					<input type="submit" value="Subscribe" class="secondary-btn" />
 				</div>
 			</div>
 		</footer>
